Revision history for Set::Similarity

{{$NEXT}}

0.013  2014-08-04 14:26:05 CEST
       - repair versioning

0.012  2014-08-03 22:03:41 CEST
       - improved documentation

0.011  2014-08-02 11:17:41 CEST
       - change minimal Perl version to 5.6

0.010  2014-08-01 21:53:39 CEST
       - improved documentation

0.009  2014-07-27 08:16:29 CEST
       - improved documentation

0.008  2014-07-26 19:15:31 CEST
       - improved documentation

0.007  2014-07-26 18:14:04 CEST
       - use arrayref

0.006  2014-05-17 20:43:12 CEST
       - release a trial release

0.005  2014-05-17 15:32:39 CEST
       - try trial release

0.004  2014-05-17 15:05:39 CEST
       - improve docs

0.003  2014-04-30 21:59:32 CEST
       - remove mymeta

0.002  2014-04-22 22:44:52 CEST
       - Added Set::Similarity::Cosine

0.001  2014-03-18
       - Initial release.