@@ -1,5 +1,7 @@
 requires 'perl', '5.006000';
 
+requires 'Carp', '0';
+
 on test => sub {
     requires 'Test::More', '0.88';
 };
